# TDengine

./: .gitignore  CMakeLists.txt  创建vs解决方案.bat  创建解决方案后添加whwqs.docx  合并上游分支.bat  更新解决方案.bat  添加上游分支.bat
documentation/webdocs/markdowndocs/: administrator-ch.md  connector-ch.md
src/client/src/: taos.aps
src/rpc/src/: rpcTcp.c
src/util/src/: ttimer.c
whwqs/: CMakeLists.txt
whwqs/TrpcServer/: .gitignore  Program.cs  TrpcSDK.cs  TrpcServer.csproj
whwqs/rpcCSharp/: .gitignore  TrpcSDK.cs  TrpcTools.cs  rpcCSharp.csproj
whwqs/test/: CMakeLists.txt
whwqs/test/rpctest/: CMakeLists.txt
whwqs/test/rpctest/src/: testMain.c
whwqs/test/rpctest/test/: CMakeLists.txt
whwqs/testform/: .gitignore  Form1.Designer.cs  Form1.cs  Program.cs  TrpcSDK.cs  readme.txt  testform.csproj
whwqs/testform/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
whwqs/trpcdll/: trpcclient.c  trpcdll.vcxproj  trpcdll.vcxproj.filters  trpcinterface.h  trpcserver.c  trpctools.c
whwqs/trpcdylib/: CMakeLists.txt
whwqs/trpcdylib/inc/: trpcinterface.h
whwqs/trpcdylib/src/: trpcclient.c  trpcserver.c  trpctools.c
